--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               GMOD EvoHack
+tagline:             'Supplementary wiki'
+description:         'The supplementary (and at first original) wiki content for the <a href="http://gmod.org/wiki/GMOD_Evo_Hackathon" target="_blank">GMOD Tools for Evolutionary Biology Hackathon</a>, a collaboration between <a href="http://nescent.org" target="_blank">NESCent</a> and <a href="http://gmod.org" target="_blank">GMOD</a>.'
+url:                 http://nescent.github.io/Tools-for-Evohack
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Hackathon participants
+  url:               http://gmod.org/wiki/GMOD_Evo_Hackathon
+  email:             info@gmod.org
 
 # Custom vars
 version:             1.0.0
