--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               GMOD EvoHack
+title:               'GMOD Evo Hackathon'
 tagline:             'Supplementary wiki'
 description:         'The supplementary (and at first original) wiki content for the <a href="http://gmod.org/wiki/GMOD_Evo_Hackathon" target="_blank">GMOD Tools for Evolutionary Biology Hackathon</a>, a collaboration between <a href="http://nescent.org" target="_blank">NESCent</a> and <a href="http://gmod.org" target="_blank">GMOD</a>.'
-url:                 http://nescent.github.io/Tools-for-Evohack
-baseurl:             ''
+url:                 http://nescent.github.io/Tools-for-Evo-Hack
+baseurl:             /Tools-for-Evo-Hack/
 paginate:            5
 
 # About/contact
